--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-jinja2==3.1.2
-python-multipart==0.0.6
-pandas==2.1.3
-numpy==1.25.2
-scikit-learn==1.3.2
-joblib==1.3.2
-pydantic==2.5.0
+fastapi>=0.100.0
+uvicorn[standard]>=0.20.0
+jinja2>=3.0.0
+python-multipart>=0.0.5
+pandas>=1.5.0
+numpy>=1.20.0
+scikit-learn>=1.2.0
+joblib>=1.2.0
